--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/react-csv": "^1.1.3",
     "axios": "^1.2.0",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "rc-slider": "^10.1.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
